stylesheets/_component.forms.scss
/* ... */
.form-choice {
    > .controls > .control__label:first-of-type {
        margin-top: 11px; // magic number to align with main label

        > .control__label {
            line-height: $line-height-large;
        }
    }
}

// disabled checkbox/radio inputs within a choice helper should have their label
// look visually disabled too (the main label for the entire choice still uses
// normal text colour)
.is-disabled + .form-choice__label {
    color: color(text, disabled);
}

.form__indent {
    @include respond-min($screen-tablet) {
        margin-left: 25%;
        margin-right: $gutter-width;

        p {
            margin-left: 0;
            padding-left: 0;
        }
    }
}

.form-range .form__control {
    @extend %range-slider;
}

.form-range > .controls .form__control {
    background-color: transparent;
    height: 48px;
    padding: 0;

    @include ie-lte(9) {
        background-color: #fafafa;
        border: 1px solid $input-border;
        border-radius: $input-border-radius;
        height: $input-height-base;
        line-height: $input-height-base;
        padding: 0 0 0 $padding-base-horizontal;

        &:focus {
            border: 1px solid color(black);
            box-shadow: 0 0 0 1px color(black);
            outline: 3px solid color(border, focus);
            outline-offset: 2px;
        }
    }
}

.form-range .input-group-addon:first-child,
.form-range .input-group-addon:last-child {
    border: 1px solid color(border);
    border-radius: $border-radius;
}

.form-range .input-group .form__control {
    padding-left: 0;
    padding-right: $gutter-width;
}

.form-range .input-group > .input-group-addon + .form__control {
    padding-left: $gutter-width;
    padding-right: $gutter-width;
}

.form-range .input-group > .form__control:last-child {
    padding-right: 0;
}

.form__group {
    .table tbody {
        background-color: #fafafa;
        border-top: 1px solid color(border);
    }

    .table-container {
        margin-bottom: .5em;
    }
}

// undo default fieldset padding
fieldset.form__group--compound {
    padding: 0;
}

.form__group--compound {
    > .control__label {
        border-bottom: 0;
        float: left; // as we can't use inline-block
        font-size: inherit;
        line-height: inherit;
        margin: 0;
    }

    > .controls {
        @include respond-min($screen-small) {
            > .input-group {
                display: inline-flex;
            }
        }

        > .form__control,
        > .control__label,
        &:first-child > .control__label {
            display: inline-block;
        }

        // override regular stacked styling
        > .form__control,
        > .control__label,
        &:first-child > .control__label,
        > .input-group {
            clear: none;
            float: none;
            vertical-align: middle;
        }

        // make sure inputs are suitably spaced when they stack with 100% width
        // at small screen widths
        > .form__control,
        > .control__label,
        &:first-child > .control__label,
        > .input-group {
            margin-top: 5px;

            @include respond-min($screen-small) {
                margin-top: 0;

                &:not(:last-child) {
                    margin-right: 10px;
                }
            }
        }

        // inline radio/checkboxes need spacing apart slightly
        > .control__label:not(:first-of-type) {
            margin-left: 10px;
        }
    }
}

